@@ -34,12 +34,14 @@ import ognl.enhance.ExpressionCompiler;
 import ognl.enhance.OgnlExpressionCompiler;
 import ognl.internal.ClassCache;
 import ognl.internal.ClassCacheImpl;
+import ognl.security.OgnlSecurityManagerFactory;
+import ognl.security.UserMethod;
 
 import java.beans.*;
 import java.lang.reflect.*;
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.security.Permission;
+import java.security.*;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -121,6 +123,223 @@ public class OgnlRuntime {
      */
     private static boolean _jdk15 = false;
     private static boolean _jdkChecked = false;
+
+    /**
+     * Control usage of JDK9+ access handler using the JVM option:
+     *   -Dognl.UseJDK9PlusAccessHandler=true
+     *   -Dognl.UseJDK9PlusAccessHandler=false
+     *
+     * Note: Set to "true" to allow the new JDK9 and later behaviour, <b>provided a newer JDK9+
+     *   is detected</b>.  By default the standard pre-JDK9 AccessHandler will be used even when
+     *   running on JDK9+, so users must "opt-in" in order to enable the alternate JDK9+ AccessHandler.
+     *   Using the JDK9PlusAccessHandler <b>may</b> avoid / mask JDK9+ warnings of the form:
+     *     "WARNING: Illegal reflective access by ognl.OgnlRuntime"
+     *   or provide an alternative  when running in environments set with "--illegal-access=deny".
+     *
+     * Note:  The default behaviour is to use the standard pre-JDK9 access handler.
+     *   Using the "false" value has the same effect as omitting the option completely.
+     *
+     * Warning: Users are <b>strongly advised</b> to review their code and confirm they really
+     *   need the AccessHandler modifying access levels, looking at alternatives to avoid that need.
+     */
+    static final String USE_JDK9PLUS_ACESS_HANDLER = "ognl.UseJDK9PlusAccessHandler";
+
+    /**
+     * Control usage of "stricter" invocation processing by invokeMethod() using the JVM options:
+     *    -Dognl.UseStricterInvocation=true
+     *    -Dognl.UseStricterInvocation=false
+     *
+     * Note: Using the "true" value has the same effect as omitting the option completely.
+     *   The default behaviour is to use the "stricter" invocation processing.
+     *   Using the "false" value reverts to the older "less strict" invocation processing
+     *   (in the event the "stricter" processing causes issues for existing applications).
+     */
+    static final String USE_STRICTER_INVOCATION = "ognl.UseStricterInvocation";
+
+    /**
+     * Hold environment flag state associated with USE_JDK9PLUS_ACESS_HANDLER.
+     *   Default: false (if not set)
+     */
+    private static final boolean _useJDK9PlusAccessHandler;
+    static {
+        boolean initialFlagState = false;
+        try {
+            final String propertyString = System.getProperty(USE_JDK9PLUS_ACESS_HANDLER);
+            if (propertyString != null && propertyString.length() > 0) {
+                initialFlagState = Boolean.parseBoolean(propertyString);
+            }
+        } catch (Exception ex) {
+            // Unavailable (SecurityException, etc.)
+        }
+        _useJDK9PlusAccessHandler = initialFlagState;
+    }
+
+    /**
+     * Hold environment flag state associated with USE_STRICTER_INVOCATION.
+     *   Default: true (if not set)
+     */
+    private static final boolean _useStricterInvocation;
+    static {
+        boolean initialFlagState = true;
+        try {
+            final String propertyString = System.getProperty(USE_STRICTER_INVOCATION);
+            if (propertyString != null && propertyString.length() > 0) {
+                initialFlagState = Boolean.parseBoolean(propertyString);
+            }
+        } catch (Exception ex) {
+            // Unavailable (SecurityException, etc.)
+        }
+        _useStricterInvocation = initialFlagState;
+    }
+
+    /*
+     * Attempt to detect the system-reported Major Java Version (e.g. 5, 7, 11).
+     */
+    private static final int _majorJavaVersion = detectMajorJavaVersion();
+    private static final boolean _jdk9Plus = _majorJavaVersion >= 9;
+
+    /*
+     * Assign an accessibility modification mechanism, based on Major Java Version and Java option flag
+     *   flag {@link OgnlRuntime#USE_JDK9PLUS_ACESS_HANDLER}.
+     *
+     * Note: Will use the standard Pre-JDK9 accessibility modification mechanism unless OGNL is running
+     *   on JDK9+ and the Java option flag has also been set true.
+     */
+    private static final AccessibleObjectHandler _accessibleObjectHandler;
+    static {
+        _accessibleObjectHandler = usingJDK9PlusAccessHandler() ? AccessibleObjectHandlerJDK9Plus.createHandler() :
+            AccessibleObjectHandlerPreJDK9.createHandler();
+    }
+
+    /**
+     * Private references for use in blocking direct invocation by invokeMethod().
+     */
+    private static final Method SYS_CONSOLE_REF;
+    private static final Method SYS_EXIT_REF;
+    private static final Method AO_SETACCESSIBLE_REF;
+    private static final Method AO_SETACCESSIBLE_ARR_REF;
+
+    /**
+     * Initialize the Method references used for blocking usage within invokeMethod().
+     */
+    static {
+        Method setAccessibleMethod = null;
+        Method setAccessibleMethodArray = null;
+        Method systemExitMethod = null;
+        Method systemConsoleMethod = null;
+        try {
+            setAccessibleMethod = AccessibleObject.class.getMethod("setAccessible", new Class<?>[]{boolean.class});
+        } catch (NoSuchMethodException nsme) {
+            // Should not happen.  To debug, uncomment the next line.
+            //throw new IllegalStateException("OgnlRuntime initialization missing setAccessible method", nsme);
+        } catch (SecurityException se) {
+            // May be blocked by existing SecurityManager.  To debug, uncomment the next line.
+            //throw new SecurityException("OgnlRuntime initialization cannot access setAccessible method", se);
+        } finally {
+            AO_SETACCESSIBLE_REF = setAccessibleMethod;
+        }
+
+        try {
+            setAccessibleMethodArray = AccessibleObject.class.getMethod("setAccessible", new Class<?>[]{AccessibleObject[].class, boolean.class});
+        } catch (NoSuchMethodException nsme) {
+            // Should not happen.  To debug, uncomment the next line.
+            //throw new IllegalStateException("OgnlRuntime initialization missing setAccessible method", nsme);
+        } catch (SecurityException se) {
+            // May be blocked by existing SecurityManager.  To debug, uncomment the next line.
+            //throw new SecurityException("OgnlRuntime initialization cannot access setAccessible method", se);
+        } finally {
+            AO_SETACCESSIBLE_ARR_REF = setAccessibleMethodArray;
+        }
+
+        try {
+            systemExitMethod = System.class.getMethod("exit", new Class<?>[]{int.class});
+        } catch (NoSuchMethodException nsme) {
+            // Should not happen.  To debug, uncomment the next line.
+            //throw new IllegalStateException("OgnlRuntime initialization missing exit method", nsme);
+        } catch (SecurityException se) {
+            // May be blocked by existing SecurityManager.  To debug, uncomment the next line.
+            //throw new SecurityException("OgnlRuntime initialization cannot access exit method", se);
+        } finally {
+            SYS_EXIT_REF = systemExitMethod;
+        }
+
+        try {
+            systemConsoleMethod = System.class.getMethod("console", new Class<?>[]{});  // Not available in JDK 1.5 or earlier
+        } catch (NoSuchMethodException nsme) {
+            // May happen for JDK 1.5 and earlier.  To debug, uncomment the next line.
+            //throw new IllegalStateException("OgnlRuntime initialization missing console method", nsme);
+        } catch (SecurityException se) {
+            // May be blocked by existing SecurityManager.  To debug, uncomment the next line.
+            //throw new SecurityException("OgnlRuntime initialization cannot access console method", se);
+        } finally {
+            SYS_CONSOLE_REF = systemConsoleMethod;
+        }
+    }
+
+    /**
+     * Control usage of the OGNL Security Manager using the JVM option:
+     *   -Dognl.security.manager=true  (or any non-null value other than 'disable')
+     *
+     * Omit '-Dognl.security.manager=' or nullify the property to disable the feature.
+     *
+     * To forcibly disable the feature (only possible at OGNL Library initialization, use the option:
+     *   -Dognl.security.manager=forceDisableOnInit
+     *
+     * Users that have their own Security Manager implementations and no intention to use the OGNL SecurityManager
+     *   sandbox may choose to use the 'forceDisableOnInit' flag option for performance reasons (avoiding overhead
+     *   involving the system property security checks - when that feature will not be used).
+     */
+    static final String OGNL_SECURITY_MANAGER = "ognl.security.manager";
+    static final String OGNL_SM_FORCE_DISABLE_ON_INIT = "forceDisableOnInit";
+
+    /**
+     * Hold environment flag state associated with OGNL_SECURITY_MANAGER.  See
+     * {@link OgnlRuntime#OGNL_SECURITY_MANAGER} for more details.
+     *   Default: false (if not set).
+     */
+    private static final boolean _disableOgnlSecurityManagerOnInit;
+    static {
+        boolean initialFlagState = false;
+        try {
+            final String propertyString = System.getProperty(OGNL_SECURITY_MANAGER);
+            if (propertyString != null && propertyString.length() > 0) {
+                initialFlagState = OGNL_SM_FORCE_DISABLE_ON_INIT.equalsIgnoreCase(propertyString);
+            }
+        } catch (Exception ex) {
+            // Unavailable (SecurityException, etc.)
+        }
+        _disableOgnlSecurityManagerOnInit = initialFlagState;
+    }
+
+    /**
+     * Allow users to revert to the old "first match" lookup for getters/setters by OGNL using the JVM options:
+     *    -Dognl.UseFirstMatchGetSetLookup=true
+     *    -Dognl.UseFirstMatchGetSetLookup=false
+     *
+     * Note: Using the "false" value has the same effect as omitting the option completely.
+     *   The default behaviour is to use the "best match" lookup for getters/setters.
+     *   Using the "true" value reverts to the older "first match" lookup for getters/setters
+     *   (in the event the "best match" processing causes issues for existing applications).
+     */
+    static final String USE_FIRSTMATCH_GETSET_LOOKUP = "ognl.UseFirstMatchGetSetLookup";
+
+    /**
+     * Hold environment flag state associated with USE_FIRSTMATCH_GETSET_LOOKUP.
+     *   Default: false (if not set)
+     */
+    private static final boolean _useFirstMatchGetSetLookup;
+    static {
+        boolean initialFlagState = false;
+        try {
+            final String propertyString = System.getProperty(USE_FIRSTMATCH_GETSET_LOOKUP);
+            if (propertyString != null && propertyString.length() > 0) {
+                initialFlagState = Boolean.parseBoolean(propertyString);
+            }
+        } catch (Exception ex) {
+            // Unavailable (SecurityException, etc.)
+        }
+        _useFirstMatchGetSetLookup = initialFlagState;
+    }
 
     static final ClassCache _methodAccessors = new ClassCacheImpl();
     static final ClassCache _propertyAccessors = new ClassCacheImpl();
@@ -441,6 +660,24 @@ public class OgnlRuntime {
         _jdkChecked = true;
 
         return _jdk15;
+    }
+
+    /**
+     * Get the Major Java Version detected by OGNL.
+     *
+     * @return Detected Major Java Version, or 5 (minimum supported version for OGNL) if unable to detect.
+     */
+    public static int getMajorJavaVersion() {
+        return _majorJavaVersion;
+    }
+
+    /**
+     * Check if the detected Major Java Version is 9 or higher (JDK 9+).
+     *
+     * @return Return true if the Detected Major Java version is 9 or higher, otherwise false.
+     */
+    public static boolean isJdk9Plus() {
+        return _jdk9Plus;
     }
 
     public static String getNumericValueGetter(Class type)
@@ -868,6 +1105,28 @@ public class OgnlRuntime {
         Boolean methodAccessCacheValue;
         Boolean methodPermCacheValue;
 
+        if (_useStricterInvocation) {
+            final Class methodDeclaringClass = method.getDeclaringClass();  // Note: synchronized(method) call below will already NPE, so no null check.
+            if ( (AO_SETACCESSIBLE_REF != null && AO_SETACCESSIBLE_REF.equals(method)) ||
+                 (AO_SETACCESSIBLE_ARR_REF != null && AO_SETACCESSIBLE_ARR_REF.equals(method)) ||
+                 (SYS_EXIT_REF != null && SYS_EXIT_REF.equals(method)) ||
+                 (SYS_CONSOLE_REF != null && SYS_CONSOLE_REF.equals(method)) ||
+                 AccessibleObjectHandler.class.isAssignableFrom(methodDeclaringClass) ||
+                 ClassResolver.class.isAssignableFrom(methodDeclaringClass) ||
+                 MethodAccessor.class.isAssignableFrom(methodDeclaringClass) ||
+                 MemberAccess.class.isAssignableFrom(methodDeclaringClass) ||
+                 OgnlContext.class.isAssignableFrom(methodDeclaringClass) ||
+                 Runtime.class.isAssignableFrom(methodDeclaringClass) ||
+                 ClassLoader.class.isAssignableFrom(methodDeclaringClass) ||
+                 ProcessBuilder.class.isAssignableFrom(methodDeclaringClass) ||
+                 AccessibleObjectHandlerJDK9Plus.unsafeOrDescendant(methodDeclaringClass) ) {
+                // Prevent calls to some specific methods, as well as all methods of certain classes/interfaces
+                //   for which no (apparent) legitimate use cases exist for their usage within OGNL invokeMethod().
+                throw new IllegalAccessException("Method [" + method + "] cannot be called from within OGNL invokeMethod() " +
+                        "under stricter invocation mode.");
+            }
+        }
+
         // only synchronize method invocation if it actually requires it
 
         synchronized(method) {
@@ -923,19 +1182,95 @@ public class OgnlRuntime {
         {
             synchronized(method)
             {
-                ((AccessibleObject) method).setAccessible(true);
+                if (checkPermission)
+                {
+                    try
+                    {
+                        _securityManager.checkPermission(getPermission(method));
+                    } catch (SecurityException ex) {
+                        throw new IllegalAccessException("Method [" + method + "] cannot be accessed.");
+                    }
+                }
+
+                _accessibleObjectHandler.setAccessible(method, true);
                 try {
-                    result = method.invoke(target, argsArray);
+                    result = invokeMethodInsideSandbox(target, method, argsArray);
                 } finally {
-                    ((AccessibleObject) method).setAccessible(false);
+                    _accessibleObjectHandler.setAccessible(method, false);
                 }
             }
         } else
         {
-            result = method.invoke(target, argsArray);
+            if (checkPermission)
+            {
+                try
+                {
+                    _securityManager.checkPermission(getPermission(method));
+                } catch (SecurityException ex) {
+                    throw new IllegalAccessException("Method [" + method + "] cannot be accessed.");
+                }
+            }
+
+            result = invokeMethodInsideSandbox(target, method, argsArray);
         }
 
         return result;
+    }
+
+    private static Object invokeMethodInsideSandbox(Object target, Method method, Object[] argsArray)
+            throws InvocationTargetException, IllegalAccessException {
+
+        if (_disableOgnlSecurityManagerOnInit) {
+            return method.invoke(target, argsArray);  // Feature was disabled at OGNL initialization.
+        }
+
+        try {
+            if (System.getProperty(OGNL_SECURITY_MANAGER) == null) {
+                return method.invoke(target, argsArray);
+            }
+        } catch (SecurityException ignored) {
+            // already enabled or user has applied a policy that doesn't allow read property so we have to honor user's sandbox
+        }
+
+        if (ClassLoader.class.isAssignableFrom(method.getDeclaringClass())) {
+            // to support OgnlSecurityManager.isAccessDenied
+            throw new IllegalAccessException("OGNL direct access to class loader denied!");
+        }
+
+        // creating object before entering sandbox to load classes out of the sandbox
+        UserMethod userMethod = new UserMethod(target, method, argsArray);
+        Permissions p = new Permissions(); // not any permission
+        ProtectionDomain pd = new ProtectionDomain(null, p);
+        AccessControlContext acc = new AccessControlContext(new ProtectionDomain[]{pd});
+
+        Object ognlSecurityManager = OgnlSecurityManagerFactory.getOgnlSecurityManager();
+
+        Long token;
+        try {
+            token = (Long) ognlSecurityManager.getClass().getMethod("enter").invoke(ognlSecurityManager);
+        } catch (NoSuchMethodException e) {
+            throw new InvocationTargetException(e);
+        }
+        if (token == null) {
+            // user has applied a policy that doesn't allow setSecurityManager so we have to honor user's sandbox
+            return method.invoke(target, argsArray);
+        }
+
+        // execute user method body with all permissions denied
+        try {
+            return AccessController.doPrivileged(userMethod, acc);
+        } catch (PrivilegedActionException e) {
+            if (e.getException() instanceof InvocationTargetException) {
+                throw (InvocationTargetException) e.getException();
+            }
+            throw new InvocationTargetException(e);
+        } finally {
+            try {
+                ognlSecurityManager.getClass().getMethod("leave", long.class).invoke(ognlSecurityManager, token);
+            } catch (NoSuchMethodException e) {
+                throw new InvocationTargetException(e);
+            }
+        }
     }
 
     /**
@@ -1878,11 +2213,36 @@ public class OgnlRuntime {
 
     /**
      * Backport of java.lang.reflect.Method#isDefault()
+     *
+     * JDK8+ supports Default Methods for interfaces.  Default Methods are defined as:
+     *   public, non-abstract and declared within an interface (must also be non-static).
+     *
+     * @param method The Method to check against the requirements for a Default Method.
+     *
+     * @return true If the Method qualifies as a Default Method, false otherwise.
      */
     private static boolean isDefaultMethod(Method method)
     {
         return ((method.getModifiers()
                 & (Modifier.ABSTRACT | Modifier.PUBLIC | Modifier.STATIC)) == Modifier.PUBLIC)
+                && method.getDeclaringClass().isInterface();
+    }
+
+    /**
+     * Determine if the provided Method is a non-Default public Interface method.
+     *
+     * Public non-Default Methods are defined as:
+     *   public, abstract, non-static and declared within an interface.
+     *
+     * @param method The Method to check against the requirements for a non-Default Method.
+     *
+     * @return true If method qualifies as a non-Default public Interface method, false otherwise.
+     *
+     * @since 3.1.25
+     */
+    private static boolean isNonDefaultPublicInterfaceMethod(Method method) {
+        return ((method.getModifiers()
+                & (Modifier.ABSTRACT | Modifier.PUBLIC | Modifier.STATIC)) == (Modifier.ABSTRACT | Modifier.PUBLIC))
                 && method.getDeclaringClass().isInterface();
     }
 
@@ -2238,7 +2598,7 @@ public class OgnlRuntime {
         final Method[] methods = c.getDeclaredMethods();
         for (int i = 0; i < methods.length; i++) {
             if (c.isInterface()) {
-                if (isDefaultMethod(methods[i])) {
+                if (isDefaultMethod(methods[i]) || isNonDefaultPublicInterfaceMethod(methods[i])) {
                     addIfAccessor(result, methods[i], baseName, findSets);
                 }
                 continue;
@@ -2311,6 +2671,26 @@ public class OgnlRuntime {
         return method;
     }
 
+    /**
+     * Returns a qualifying get (getter) method, if one is available for the given targetClass and propertyName.
+     *
+     * Note: From OGNL 3.1.25 onward, this method will attempt to find the first get getter method(s) that match:
+     *         1) First get (getter) method, whether public or not.
+     *         2) First public get (getter) method, provided the method's declaring class is also public.
+     *            This may be the same as 1), if 1) is also public and its declaring class is also public.
+     *         3) First public non-Default interface get (getter) method, provided the method's declaring class is also public.
+     *       The <b>order of preference (priority)<b> for the above matches will be <b>2</b> (1st public getter),
+     *       <b>3</b> (1st public non-Default interface getter), <b>1</b> (1st getter of any kind).
+     *   This updated methodology should help limit the need to modify method accessibility levels in some circumstances.
+     *
+     * @param context The current execution context.
+     * @param targetClass Class to search for a get method (getter).
+     * @param propertyName Name of the property for the get method (getter).
+     *
+     * @return
+     * @throws IntrospectionException
+     * @throws OgnlException
+     */
     private static Method _getGetMethod(OgnlContext context, Class targetClass, String propertyName)
             throws IntrospectionException, OgnlException
     {
@@ -2320,6 +2700,9 @@ public class OgnlRuntime {
 
         if (methods != null)
         {
+            Method firstGetter = null;
+            Method firstPublicGetter = null;
+            Method firstNonDefaultPublicInterfaceGetter = null;
             for (int i = 0, icount = methods.size(); i < icount; i++)
             {
                 Method m = (Method) methods.get(i);
@@ -2327,10 +2710,24 @@ public class OgnlRuntime {
 
                 if (mParameterTypes.length == 0)
                 {
-                    result = m;
-                    break;
+                    boolean declaringClassIsPublic = Modifier.isPublic(m.getDeclaringClass().getModifiers());
+                    if (firstGetter == null) {
+                        firstGetter = m;
+                        if (_useFirstMatchGetSetLookup) {
+                            break;  // Stop looking (emulate original logic, return 1st match)
+                        }
+                    }
+                    if (firstPublicGetter == null && Modifier.isPublic(m.getModifiers()) && declaringClassIsPublic) {
+                        firstPublicGetter = m;
+                        break;  // Stop looking (this is the best possible match)
+                    }
+                    if (firstNonDefaultPublicInterfaceGetter == null && isNonDefaultPublicInterfaceMethod(m) && declaringClassIsPublic) {
+                        firstNonDefaultPublicInterfaceGetter = m;
+                    }
                 }
             }
+            result = (firstPublicGetter != null) ? firstPublicGetter :
+                    (firstNonDefaultPublicInterfaceGetter != null) ? firstNonDefaultPublicInterfaceGetter : firstGetter;
         }
 
         return result;
@@ -2368,6 +2765,26 @@ public class OgnlRuntime {
         return method;
     }
 
+    /**
+     * Returns a qualifying set (setter) method, if one is available for the given targetClass and propertyName.
+     *
+     * Note: From OGNL 3.1.25 onward, this method will attempt to find the first set setter method(s) that match:
+     *         1) First set (setter) method, whether public or not.
+     *         2) First public set (setter) method, provided the method's declaring class is also public.
+     *            This may be the same as 1), if 1) is also public and its declaring class is also public.
+     *         3) First public non-Default interface set (setter) method, provided the method's declaring class is also public.
+     *       The <b>order of preference (priority)<b> for the above matches will be <b>2</b> (1st public setter),
+     *       <b>3</b> (1st public non-Default interface setter), <b>1</b> (1st setter of any kind).
+     *   This updated methodology should help limit the need to modify method accessibility levels in some circumstances.
+     *
+     * @param context The current execution context.
+     * @param targetClass Class to search for a set method (setter).
+     * @param propertyName Name of the property for the set method (setter).
+     *
+     * @return
+     * @throws IntrospectionException
+     * @throws OgnlException
+     */
     private static Method _getSetMethod(OgnlContext context, Class targetClass, String propertyName)
             throws IntrospectionException, OgnlException
     {
@@ -2377,16 +2794,34 @@ public class OgnlRuntime {
 
         if (methods != null)
         {
+            Method firstSetter = null;
+            Method firstPublicSetter = null;
+            Method firstNonDefaultPublicInterfaceSetter = null;
             for (int i = 0, icount = methods.size(); i < icount; i++)
             {
                 Method m = (Method) methods.get(i);
                 Class[] mParameterTypes = findParameterTypes(targetClass, m); //getParameterTypes(m);
 
                 if (mParameterTypes.length == 1) {
-                    result = m;
-                    break;
+                    boolean declaringClassIsPublic = Modifier.isPublic(m.getDeclaringClass().getModifiers());
+                    if (firstSetter == null) {
+                        firstSetter = m;
+                        if (_useFirstMatchGetSetLookup) {
+                            break;  // Stop looking (emulate original logic, return 1st match)
+                        }
+                    }
+                    if (firstPublicSetter == null && Modifier.isPublic(m.getModifiers()) && declaringClassIsPublic) {
+                        firstPublicSetter = m;
+                        break;  // Stop looking (this is the best possible match)
+                    }
+                    if (firstNonDefaultPublicInterfaceSetter == null && isNonDefaultPublicInterfaceMethod(m) && declaringClassIsPublic) {
+                        firstNonDefaultPublicInterfaceSetter = m;
+                    }
                 }
             }
+
+            result = (firstPublicSetter != null) ? firstPublicSetter :
+                    (firstNonDefaultPublicInterfaceSetter != null) ? firstNonDefaultPublicInterfaceSetter : firstSetter;
         }
 
         return result;
@@ -3431,5 +3866,149 @@ public class OgnlRuntime {
 
     }
 
+    /**
+     * Detect the (reported) Major Java version running OGNL.
+     *
+     * Should support naming conventions of pre-JDK9 and JDK9+.
+     * See <a href="https://openjdk.java.net/jeps/223">JEP 223: New Version-String Scheme</a> for details.
+     *
+     * @return Detected Major Java Version, or 5 (minimum supported version for OGNL) if unable to detect.
+     *
+     * @since 3.1.25
+     */
+    static int detectMajorJavaVersion() {
+        int majorVersion = -1;
+        try {
+            majorVersion = parseMajorJavaVersion(System.getProperty("java.version"));
+        } catch (Exception ex) {
+            // Unavailable (SecurityException, etc.)
+        }
+        if (majorVersion == -1) {
+            majorVersion = 5;  // Return minimum supported Java version for OGNL
+        }
+
+        return majorVersion;
+    }
+
+    /**
+     * Parse a Java version string to determine the Major Java version.
+     *
+     * Should support naming conventions of pre-JDK9 and JDK9+.
+     * See <a href="https://openjdk.java.net/jeps/223">JEP 223: New Version-String Scheme</a> for details.
+     *
+     * @return Detected Major Java Version, or 5 (minimum supported version for OGNL) if unable to detect.
+     *
+     * @since 3.1.25
+     */
+    static int parseMajorJavaVersion(String versionString) {
+        int majorVersion = -1;
+        try {
+            if (versionString != null && versionString.length() > 0) {
+                final String[] sections = versionString.split("[\\.\\-\\+]");
+                final int firstSection;
+                final int secondSection;
+                if (sections.length > 0) {  // Should not happen, guard anyway
+                    if (sections[0].length() > 0) {
+                        if (sections.length > 1  && sections[1].length() > 0) {
+                            firstSection = Integer.parseInt(sections[0]);
+                            if (sections[1].matches("\\d+")) {
+                                secondSection = Integer.parseInt(sections[1]);
+                            } else {
+                                secondSection = -1;
+                            }
+                        } else  {
+                            firstSection = Integer.parseInt(sections[0]);
+                            secondSection = -1;
+                        }
+                        if (firstSection == 1 && secondSection != -1) {
+                            majorVersion = secondSection;  // Pre-JDK 9 versioning
+                        } else {
+                            majorVersion = firstSection;   // JDK9+ versioning
+                        }
+                    }
+                }
+            }
+        } catch (Exception ex) {
+            // Unavailable (NumberFormatException, etc.)
+        }
+        if (majorVersion == -1) {
+            majorVersion = 5;  // Return minimum supported Java version for OGNL
+        }
+
+        return majorVersion;
+    }
+
+    /**
+     * Returns the value of the flag indicating whether the JDK9+ access handler has been
+     *   been requested (it can then be used if the Major Java Version number is 9+).
+     *
+     * Note: Value is controlled by a Java option flag {@link OgnlRuntime#USE_JDK9PLUS_ACESS_HANDLER}.
+     *
+     * @return true if a request to use the JDK9+ access handler is requested, false otherwise (always use pre-JDK9 handler).
+     *
+     * @since 3.1.25
+     */
+    public static boolean getUseJDK9PlusAccessHandlerValue() {
+        return _useJDK9PlusAccessHandler;
+    }
+
+    /**
+     * Returns the value of the flag indicating whether "stricter" invocation is
+     *   in effect or not.
+     *
+     * Note: Value is controlled by a Java option flag {@link OgnlRuntime#USE_STRICTER_INVOCATION}.
+     *
+     * @return true if stricter invocation is in effect, false otherwise.
+     *
+     * @since 3.1.25
+     */
+    public static boolean getUseStricterInvocationValue() {
+        return _useStricterInvocation;
+    }
+
+    /**
+     * Returns the value of the flag indicating whether the OGNL SecurityManager was disabled
+     *   on initialization or not.
+     *
+     * Note: Value is controlled by a Java option flag {@link OgnlRuntime#OGNL_SECURITY_MANAGER} using
+     *       the value {@link OgnlRuntime#OGNL_SM_FORCE_DISABLE_ON_INIT}.
+     *
+     * @return true if OGNL SecurityManager was disabled on initialization, false otherwise.
+     *
+     * @since 3.1.25
+     *
+     * @return
+     */
+    public static boolean getDisableOgnlSecurityManagerOnInitValue() {
+        return _disableOgnlSecurityManagerOnInit;
+    }
+
+    /**
+     * Returns an indication as to whether the current state indicates the
+     *   JDK9+ (9 and later) access handler is being used / should be used.  This
+     *   is based on a combination of the detected Major Java Version and the
+     *   Java option flag {@link OgnlRuntime#USE_JDK9PLUS_ACESS_HANDLER}.
+     *
+     * @return true if the JDK9 and later access handler is being used / should be used, false otherwise.
+     *
+     * @since 3.1.25
+     */
+    public static boolean usingJDK9PlusAccessHandler() {
+        return (_jdk9Plus && _useJDK9PlusAccessHandler);
+    }
+
+    /**
+     * Returns the value of the flag indicating whether the old "first match" lookup for
+     *   getters/setters is in effect or not.
+     *
+     * Note: Value is controlled by a Java option flag {@link OgnlRuntime#USE_FIRSTMATCH_GETSET_LOOKUP}.
+     *
+     * @return true if the old "first match" lookup is in effect, false otherwise.
+     *
+     * @since 3.1.25
+     */
+    public static boolean getUseFirstMatchGetSetLookupValue() {
+        return _useFirstMatchGetSetLookup;
+    }
 
 }
